[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/player_2.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://weapoms/lasers/laser_player/LaserPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/flash_screen/FlashScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://effects/explosion/Explosion.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 67.4759

[node name="Player" type="Area2D" groups=[
"player",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
scene_player_laser = ExtResource( 3 )
scene_flash_screen = ExtResource( 4 )
scene_explosion = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Cannons" type="Node2D" parent="."]

[node name="LeftCannon" type="Position2D" parent="Cannons"]
position = Vector2( -26, -46 )

[node name="RightCannon" type="Position2D" parent="Cannons"]
position = Vector2( 26, -46 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
